--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,11 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title th:text="#{inflow.title}"></title>
+    <title th:text="#{home.title}"></title>
     <link rel="stylesheet" th:href="@{/css/hamster.css}" href="../static/css/hamster.css">
 </head>
 <body>
-
 <div class="row">
     <nav class="col-sm-12">
         <div class="col-sm-2">
@@ -46,41 +45,6 @@
             <div class="nav"><a th:href="@{statics}"><span  th:text="#{nav.statics}"></span></a></div>
         </div>
     </nav>
-
-
 </div>
-<h1 th:text="#{inflow.h1}"></h1>
-<div class="container">
-    <form th:action="@{/inflow}" th:object="${inflow}" method="post">
-        <label th:text="#{inflow.label1}">válaszd ki a terméket amit rendelni szeretnél</label>
-        <div class="form-group">
-            <select th:field="*{productId}">
-                <option th:each="product : ${ProductsfromDB} " th:text="${product.brand} + ' ' + ${product.name}"
-                        th:value="${product.id}">product
-                </option>
-            </select>
-        </div>
-        <label th:text="#{inflow.label2}">válaszd ki a a polcot ahova rakni akarod </label>
-        <div class="form-group">
-            <select th:field="*{shelfId}">
-                <option th:each="shelf : ${shelvesFromDB} " th:text="${shelf.loco} + ' ' + ${shelf.capacity}"
-                        th:value="${shelf.loco}">shelf
-                </option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label th:text="#{inflow.label3}">a raklapon lévő termék mennyiség</label>
-            <input type="number" th:field="*{numberOfPallets}" class="form-control" th:placeholder="#{placeholder.numberOfProductsOnPallet}">
-        </div>
-        <div class="form-group">
-            <label th:text="#{inflow.label3}">a raklapon lévő termék mennyiség</label>
-            <input type="number" th:field="*{numberOfProductsOnPallet}" class="form-control" th:placeholder="#{placeholder.numberOfProductsOnPallet}">
-        </div>
-        <div class="fromErrorMessage" th:if="${#fields.hasErrors('global')}" th:errors="global"> error message</div>
-        <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-
-</div>
-
 </body>
 </html>
