--- a/src/main/resources/templates/management/product/updateproduct.html
+++ b/src/main/resources/templates/management/product/updateproduct.html
@@ -2,23 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title th:text="#{inflow.title}"></title>
+    <title th:text="#{management.product.title}"></title>
     <link rel="stylesheet" th:href="@{/css/hamster.css}" href="../static/css/hamster.css">
 </head>
 <body>
-
 <div class="row">
     <nav class="col-sm-12">
         <div class="col-sm-2">
             <div class="nav">MÓKUS!</div>
         </div>
         <div class="col-sm-2">
-            <div class="nav" ><a th:href="@{home}" target="_self"><span th:text="#{nav.home}" >Kezdőlap</span></a></div>
+            <div class="nav" ><a th:href="@{../home}" target="_self"><span th:text="#{nav.home}" >Kezdőlap</span></a></div>
         </div>
         <div class="col-sm-2">
             <div class="product" ><span th:text="#{nav.product}"></span>
                 <div class="productstuff">
-                    <a  th:href="@{management/product}" target="_self"> <span  th:text="#{nav.product.insert}" >termék felvétel</span></a>
+                    <a  th:href="@{product}" target="_self"> <span  th:text="#{nav.product.insert}" >termék felvétel</span></a>
                     <!--<a th:text="#{nav.product.update}">termék módosítás </a>-->
                 </div>
             </div>
@@ -27,7 +26,7 @@
         <div class="col-sm-2">
             <div class="shelf" ><span  th:text="#{nav.shelf}"></span>
                 <div class="shelfstuff">
-                    <a  th:href="@{management/shelf}" target="_self"><span  th:text="#{nav.shelf.insert}"></span></a>
+                    <a  th:href="@{shelf}" target="_self"><span  th:text="#{nav.shelf.insert}"></span></a>
                     <a th:text="#{nav.shelf.update}"></a>
                 </div>
             </div>
@@ -36,51 +35,52 @@
         <div class="col-sm-2">
             <div class="pallet" ><span  th:text="#{nav.pallet}"></span>
                 <div class="palletstuff">
-                    <a th:href="@{inflow}" target="_self"><span  th:text="#{nav.pallet.insert}"></span></a>
+                    <a th:href="@{../inflow}" target="_self"><span  th:text="#{nav.pallet.insert}"></span></a>
                     <a th:text="#{nav.pallet.delete}"> </a>
                 </div>
             </div>
         </div>
 
         <div class="col-sm-2">
-            <div class="nav"><a th:href="@{statics}"><span  th:text="#{nav.statics}"></span></a></div>
+            <div class="nav"><a th:href="@{../statics}"><span  th:text="#{nav.statics}"></span></a></div>
         </div>
     </nav>
-
-
 </div>
-<h1 th:text="#{inflow.h1}"></h1>
+
+<div class=".container">
+    <h1 th:text="#{management.product.h1}"></h1>
+</div>
 <div class="container">
-    <form th:action="@{/inflow}" th:object="${inflow}" method="post">
-        <label th:text="#{inflow.label1}">válaszd ki a terméket amit rendelni szeretnél</label>
+    <form th:action="@{update}" th:object="${productForm}" method="post">
         <div class="form-group">
-            <select th:field="*{productId}">
+            <select th:field="*{id}">
                 <option th:each="product : ${ProductsfromDB} " th:text="${product.brand} + ' ' + ${product.name}"
                         th:value="${product.id}">product
                 </option>
             </select>
         </div>
-        <label th:text="#{inflow.label2}">válaszd ki a a polcot ahova rakni akarod </label>
         <div class="form-group">
-            <select th:field="*{shelfId}">
-                <option th:each="shelf : ${shelvesFromDB} " th:text="${shelf.loco} + ' ' + ${shelf.capacity}"
-                        th:value="${shelf.loco}">shelf
-                </option>
-            </select>
+            <label th:text="#{management.product.label1}">A Termékneve</label>
+            <div class="fromErrorMessage" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"> error message</div>
+            <input type="text" th:field="*{name}" class="form-control" th:placeholder="#{placeholder.name}">
+        </div>
+
+        <div class="form-group">
+            <label th:text="#{management.product.label2}">A Termék márkája</label>
+            <div class="fromErrorMessage" th:if="${#fields.hasErrors('brand')}" th:errors="*{brand}"> error message
+            </div>
+            <input type="text" th:field="*{brand}" class="form-control" th:placeholder="#{placeholder.brand}">
         </div>
         <div class="form-group">
-            <label th:text="#{inflow.label3}">a raklapon lévő termék mennyiség</label>
-            <input type="number" th:field="*{numberOfPallets}" class="form-control" th:placeholder="#{placeholder.numberOfProductsOnPallet}">
-        </div>
-        <div class="form-group">
-            <label th:text="#{inflow.label3}">a raklapon lévő termék mennyiség</label>
-            <input type="number" th:field="*{numberOfProductsOnPallet}" class="form-control" th:placeholder="#{placeholder.numberOfProductsOnPallet}">
+            <div class="fromErrorMessage" th:if="${#fields.hasErrors('price')}" th:errors="*{price}"> error message
+            </div>
+            <label th:text="#{management.product.label3}">A Termék értéke</label>
+            <input type="number" th:field="*{price}" class="form-control" th:placeholder="#{placeholder.price}">
         </div>
         <div class="fromErrorMessage" th:if="${#fields.hasErrors('global')}" th:errors="global"> error message</div>
         <button type="submit" class="btn btn-default">Submit</button>
     </form>
 
 </div>
-
 </body>
 </html>
