--- a/src/main/resources/templates/management/product/updateproduct.html
+++ b/src/main/resources/templates/management/product/updateproduct.html
@@ -2,8 +2,11 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title th:text="#{management.product.title}"></title>
-    <link rel="stylesheet" th:href="@{/css/hamster.css}" href="../static/css/hamster.css">
+    <title th:text="#{management.product.update.title}"></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/hamster.css}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script  rel="text/javascript"  th:src="@{/js/hamster.js}"></script>
 </head>
 <body>
 <div class="row">
@@ -12,43 +15,48 @@
             <div class="nav">MÓKUS!</div>
         </div>
         <div class="col-sm-2">
-            <div class="nav" ><a th:href="@{../home}" target="_self"><span th:text="#{nav.home}" >Kezdőlap</span></a></div>
+            <div class="nav"><a th:href="@{~/home}" target="_self"><span th:text="#{nav.home}">Kezdőlap</span></a>
+            </div>
         </div>
         <div class="col-sm-2">
-            <div class="product" ><span th:text="#{nav.product}"></span>
+            <div class="product"><span th:text="#{nav.product}"></span>
                 <div class="productstuff">
-                    <a  th:href="@{product}" target="_self"> <span  th:text="#{nav.product.insert}" >termék felvétel</span></a>
-                    <!--<a th:text="#{nav.product.update}">termék módosítás </a>-->
+                    <a th:href="@{insert}" target="_self"> <span
+                            th:text="#{nav.product.insert}">termék felvétel</span></a>
+                    <a th:href="@{update}" target="_self"><span
+                            th:text="#{nav.product.update}">termék módosítás </span></a>
+                    <a th:href="@{delete}" target="_self"><span
+                            th:text="#{nav.product.delete}">termék törlés </span></a>
                 </div>
             </div>
         </div>
 
         <div class="col-sm-2">
-            <div class="shelf" ><span  th:text="#{nav.shelf}"></span>
+            <div class="shelf"><span th:text="#{nav.shelf}"></span>
                 <div class="shelfstuff">
-                    <a  th:href="@{shelf}" target="_self"><span  th:text="#{nav.shelf.insert}"></span></a>
-                    <a th:text="#{nav.shelf.update}"></a>
+                    <a th:href="@{../shelf/insert}" target="_self"><span th:text="#{nav.shelf.insert}"></span></a>
+                    <a th:href="@{../shelf/update}" target="_self"><span th:text="#{nav.shelf.update}"></span></a>
+                    <a th:href="@{../shelf/delete}" target="_self"><span th:text="#{nav.shelf.delete}"></span></a>
                 </div>
             </div>
         </div>
 
         <div class="col-sm-2">
-            <div class="pallet" ><span  th:text="#{nav.pallet}"></span>
+            <div class="pallet"><span th:text="#{nav.pallet}"></span>
                 <div class="palletstuff">
-                    <a th:href="@{../inflow}" target="_self"><span  th:text="#{nav.pallet.insert}"></span></a>
-                    <a th:text="#{nav.pallet.delete}"> </a>
+                    <a th:href="@{~/inflow}" target="_self"><span th:text="#{nav.pallet.insert}"></span></a>
                 </div>
             </div>
         </div>
 
         <div class="col-sm-2">
-            <div class="nav"><a th:href="@{../statics}"><span  th:text="#{nav.statics}"></span></a></div>
+            <div class="nav"><a th:href="@{../statics}"><span th:text="#{nav.statics}"></span></a></div>
         </div>
     </nav>
 </div>
 
 <div class=".container">
-    <h1 th:text="#{management.product.h1}"></h1>
+    <h1 th:text="#{management.product.update.h1}"></h1>
 </div>
 <div class="container">
     <form th:action="@{update}" th:object="${productForm}" method="post">
