--- a/src/main/resources/templates/management/product/productdelete.html
+++ b/src/main/resources/templates/management/product/productdelete.html
@@ -41,6 +41,7 @@
             <div class="pallet" ><span  th:text="#{nav.pallet}"></span>
                 <div class="palletstuff">
                     <a th:href="@{~/inflow}" target="_self"><span  th:text="#{nav.pallet.insert}"></span></a>
+                    <a th:href="@{~/outflow}" target="_self"><span th:text="#{nav.pallet.out}"></span></a>
                 </div>
             </div>
         </div>
@@ -57,6 +58,7 @@
 <div class="container">
     <form th:action="@{delete}" th:object="${productForm}" method="post">
         <div class="form-group">
+            <label th:text="#{management.product.delete.label}"></label>
             <select th:field="*{id}">
                 <option th:each="product : ${ProductsfromDB} " th:text="${product.brand} + ' ' + ${product.name}"
                         th:value="${product.id}">
@@ -64,7 +66,7 @@
             </select>
         </div>
         <div class="fromErrorMessage" th:if="${#fields.hasErrors('global')}" th:errors="global"> error message</div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default" th:text="#{submit.btn}">Submit</button>
     </form>
 
 </div>
