--- a/src/main/resources/templates/management/shelf/shelfdelete.html
+++ b/src/main/resources/templates/management/shelf/shelfdelete.html
@@ -42,6 +42,7 @@
             <div class="pallet"><span th:text="#{nav.pallet}"></span>
                 <div class="palletstuff">
                     <a th:href="@{~/inflow}" target="_self"><span th:text="#{nav.pallet.insert}"></span></a>
+                    <a th:href="@{~/outflow}" target="_self"><span th:text="#{nav.pallet.out}"></span></a>
                 </div>
             </div>
         </div>
@@ -58,6 +59,7 @@
 <div class="container">
     <form th:action="@{delete}" th:object="${shelfForm}" method="post">
         <div class="form-group">
+            <label th:text="#{management.shelf.delete.label}">
             <select th:field="*{loco}">
                 <option th:each="shelf : ${shelvesFromDB} " th:text="${shelf.loco} + ' ' + ${shelf.capacity}"
                         th:value="${shelf.loco}">shelf
@@ -65,7 +67,7 @@
             </select>
         </div>
         <div class="fromErrorMessage" th:if="${#fields.hasErrors('global')}" th:errors="global"> error message</div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default" th:text="#{submit.btn}">Submit</button>
     </form>
 </div>
 </body>
