--- a/src/main/resources/templates/management/shelf/shelfupdate.html
+++ b/src/main/resources/templates/management/shelf/shelfupdate.html
@@ -42,6 +42,7 @@
             <div class="pallet"><span th:text="#{nav.pallet}"></span>
                 <div class="palletstuff">
                     <a th:href="@{~/inflow}" target="_self"><span th:text="#{nav.pallet.insert}"></span></a>
+                    <a th:href="@{~/outflow}" target="_self"><span th:text="#{nav.pallet.out}"></span></a>
                 </div>
             </div>
         </div>
@@ -57,6 +58,7 @@
 
 <div class="container">
     <form th:action="@{update}" th:object="${shelfForm}" method="post">
+        <label  th:text="#{management.shelf.update.label}"></label>
         <div class="form-group">
             <select th:field="*{loco}">
                 <option th:each="shelf : ${shelvesFromDB} " th:text="${shelf.loco} + ' ' + ${shelf.capacity}"
@@ -78,7 +80,7 @@
             <input type="number" th:field="*{capacity}" class="form-control" th:placeholder="#{placeholder.capacity}">
         </div>
         <div class="fromErrorMessage" th:if="${#fields.hasErrors('global')}" th:errors="global"> error message</div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default" th:text="#{submit.btn}">Submit</button>
     </form>
 </div>
 </body>
