--- a/src/main/resources/templates/outflow.html
+++ b/src/main/resources/templates/outflow.html
@@ -2,43 +2,94 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title th:text="#{management.product.title}"></title>
+    <title th:text="#{outflow.title}"></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" th:href="@{/css/hamster.css}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script  rel="text/javascript"  th:src="@{/js/hamster.js}"></script>
+    <script rel="text/javascript" th:src="@{/js/hamster.js}"></script>
 </head>
-<body>
-<form th:action="@{/inflow}" th:object="${inflow}" method="post" class="form">
-    <label th:text="#{inflow.label1}">válaszd ki a terméket amit rendelni szeretnél</label>
-    <div class="form-group">
-        <select th:field="*{productId}">
-            <option th:each="product : ${ProductsfromDB} " th:text="${product.brand} + ' ' + ${product.name}"
-                    th:value="${product.id}">product
-            </option>
-        </select>
-    </div>
-    <label th:text="#{inflow.label2}">válaszd ki a a polcot ahova rakni akarod </label>
-    <div class="form-group">
-        <select th:field="*{shelfId}">
-            <option th:each="shelf : ${shelvesFromDB} " th:text="${shelf.loco} + ' ' + ${shelf.capacity}"
-                    th:value="${shelf.loco}">shelf
-            </option>
-        </select>
-    </div>
-    <div class="form-group">
-        <label th:text="#{inflow.label3}">a raklapon lévő termék mennyiség</label>
-        <input type="number" th:field="*{numberOfPallets}" class="form-control" th:placeholder="#{placeholder.numberOfProductsOnPallet}">
-    </div>
-    <div class="form-group">
-        <label th:text="#{inflow.label3}">a raklapon lévő termék mennyiség</label>
-        <input type="number" th:field="*{numberOfProductsOnPallet}" class="form-control" th:placeholder="#{placeholder.numberOfProductsOnPallet}">
-    </div>
-    <div class="fromErrorMessage" th:if="${#fields.hasErrors('global')}" th:errors="global"> error message</div>
-    <button type="submit" class="btn btn-default">Submit</button>
-</form>
-    <button class="duplicate" type="submit"></button>
 
+<body>
+<div class="row">
+    <nav class="col-sm-12">
+        <div class="col-sm-2">
+            <div class="nav">MÓKUS!</div>
+        </div>
+        <div class="col-sm-2">
+            <div class="nav"><a th:href="@{~/home}" target="_self"><span th:text="#{nav.home}">Kezdőlap</span></a>
+            </div>
+        </div>
+        <div class="col-sm-2">
+            <div class="product"><span th:text="#{nav.product}"></span>
+                <div class="productstuff">
+                    <a th:href="@{/management/product/insert}" target="_self"> <span th:text="#{nav.product.insert}">termék felvétel</span></a>
+                    <a th:href="@{/management/product/update}" target="_self"><span th:text="#{nav.product.update}">termék módosítás </span></a>
+                    <a th:href="@{/management/product/delete}" target="_self"><span th:text="#{nav.product.delete}">termék törlés </span></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-2">
+            <div class="shelf"><span th:text="#{nav.shelf}"></span>
+                <div class="shelfstuff">
+                    <a th:href="@{/management/shelf/insert}" target="_self"><span th:text="#{nav.shelf.insert}"></span></a>
+                    <a th:href="@{/management/shelf/update}" target="_self"><span th:text="#{nav.shelf.update}"></span></a>
+                    <a th:href="@{/management/shelf/delete}" target="_self"><span th:text="#{nav.shelf.delete}"></span></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-2">
+            <div class="pallet"><span th:text="#{nav.pallet}"></span>
+                <div class="palletstuff">
+                    <a th:href="@{~/inflow}" target="_self"><span th:text="#{nav.pallet.insert}"></span></a>
+                    <a th:href="@{~/outflow}" target="_self"><span th:text="#{nav.pallet.out}"></span></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-2">
+            <div class="nav"><a th:href="@{../statics}"><span th:text="#{nav.statics}"></span></a></div>
+        </div>
+    </nav>
+</div>
+<h1 th:text="#{outflow.h1}"></h1>
+<form th:action="@{/outflow}" th:object="${outflowWrapper}" method="post">
+    <div class="container">
+        <div class="products">
+            <div class="form-group">
+                <label th:text="#{outflow.label1}"></label>
+                <select th:field="*{outflows[0].productID}" class="form-control">
+                    <option th:each="product : ${productsFromDB}"
+                            th:text="${product.brand} + ' ' + ${product.name}"
+                            th:value="${product.id}" class="form-control">product
+                    </option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label th:text="#{outflow.label2}"></label>
+                <input th:field="*{outflows[0].quantity}" type="number" class="form-control">
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <button type="submit" class="btn btn-default" th:text="#{submit.btn}">Submit</button>
+        <button  class="btn btn-default" id="duplicate" type="button" th:text="#{duplicate.btn}"></button>
+    </div>
 </form>
+
+
 </body>
 </html>
+
+<!--<div class="pallet">-->
+<!--<div class="form-group">-->
+<!--<select th:field >-->
+<!--<option  th:name="|pallets[0]|.key" th:each="pallet : ${palletFromDB}" th:text="${pallet.product.brand} + ' '-->
+<!--+ ${pallet.product.name} + ' ' + ${pallet.numberOfProductsOnPallet} " ></option>-->
+<!--</select>-->
+<!--</div>-->
+<!--<div class="form-group">-->
+<!--<input type="number">-->
+<!--</div>-->
+<!--</div>-->
