[IMPROVEMENT] english i18n and some formating

--- a/src/main/resources/templates/management/product/productinsert.html
+++ b/src/main/resources/templates/management/product/productinsert.html
@@ -13,7 +13,7 @@
 <div class="row">
     <nav class="col-sm-12">
         <div class="col-sm-2">
-            <div class="nav">MÓKUS!</div>
+            <div class="nav"><img th:src="@{/images/hamster.png}" alt="hamsterlogo" class="img-responsive" id="hamsterimg" ></div>
         </div>
         <div class="col-sm-2">
             <div class="nav"><a th:href="@{~/home}" target="_self"><span th:text="#{nav.home}">Kezdőlap</span></a>
