--- a/src/main/resources/templates/inflow.html
+++ b/src/main/resources/templates/inflow.html
@@ -11,7 +11,7 @@
 <div class="row">
     <nav class="col-sm-12">
         <div class="col-sm-2">
-            <div class="nav">MÓKUS!</div>
+            <div class="nav"><img th:src="@{/images/hamster.png}" alt="hamsterlogo" class="img-responsive" id="hamsterimg" ></div>
         </div>
         <div class="col-sm-2">
             <div class="nav"><a th:href="@{~/home}" target="_self"><span th:text="#{nav.home}">Kezdőlap</span></a>
@@ -81,8 +81,7 @@
         <div class="fromErrorMessage" th:if="${#fields.hasErrors('global')}" th:errors="global"> error message</div>
         <button type="submit" class="btn btn-default" th:text="#{submit.btn}">Submit</button>
     </form>
-
+    
 </div>
-
 </body>
 </html>
