--- a/src/main/resources/templates/management/product/updateproduct.html
+++ b/src/main/resources/templates/management/product/updateproduct.html
@@ -12,7 +12,7 @@
 <div class="row">
     <nav class="col-sm-12">
         <div class="col-sm-2">
-            <div class="nav">MÓKUS!</div>
+            <div class="nav"><img th:src="@{/images/hamster.png}" alt="hamsterlogo" class="img-responsive" id="hamsterimg" ></div>
         </div>
         <div class="col-sm-2">
             <div class="nav"><a th:href="@{~/home}" target="_self"><span th:text="#{nav.home}">Kezdőlap</span></a>
@@ -61,6 +61,7 @@
 </div>
 <div class="container">
     <form th:action="@{update}" th:object="${productForm}" method="post">
+        <label th:text="#{management.product.update.label}"></label>
         <div class="form-group">
             <select th:field="*{id}">
                 <option th:each="product : ${ProductsfromDB} " th:text="${product.brand} + ' ' + ${product.name}"
