--- a/src/main/resources/templates/management/shelf/shelfdelete.html
+++ b/src/main/resources/templates/management/shelf/shelfdelete.html
@@ -12,7 +12,7 @@
 <div class="row">
     <nav class="col-sm-12">
         <div class="col-sm-2">
-            <div class="nav">MÓKUS!</div>
+            <div class="nav"><img th:src="@{/images/hamster.png}" alt="hamsterlogo" class="img-responsive" id="hamsterimg" ></div>
         </div>
         <div class="col-sm-2">
             <div class="nav"><a th:href="@{~/home}" target="_self"><span th:text="#{nav.home}">Kezdőlap</span></a>
@@ -58,8 +58,8 @@
 
 <div class="container">
     <form th:action="@{delete}" th:object="${shelfForm}" method="post">
+        <label th:text="#{management.shelf.delete.label}"></label>
         <div class="form-group">
-            <label th:text="#{management.shelf.delete.label}">
             <select th:field="*{loco}">
                 <option th:each="shelf : ${shelvesFromDB} " th:text="${shelf.loco} + ' ' + ${shelf.capacity}"
                         th:value="${shelf.loco}">shelf
